<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battleship</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_fire">Fire at selected</string>
    <string name="menu_item_confirm">Confirm</string>
    <string name="menu_item_goto_pboard">Look at my board</string>
    <string name="menu_item_goto_oboard">Look at enemy board</string>
    <string name="menu_item_rotate">Rotate Ship</string>
    <string name="menu_item_quit">Quit</string>
    <string name="menu_item_cancel">Cancel</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_music_mute">Mute Music</string>
    <string name="menu_item_sound_mute">Mute Sound</string>
    <string name="menu_item_music_unmute">Unmute Music</string>
    <string name="menu_item_sound_unmute">Unmute Sound</string>
    <string name="main_menu_start_game">Start Game</string>
    <string name="main_menu_find_game">Find Game</string>
    <string name="main_menu_send_udp">Send UDP</string>
    <string name="main_menu_recieve_udp">Recieve UDP</string>
    <string name="main_menu_nios_ip">Nios II/Middleman IP:</string>
    <string name="main_menu_dialog_level_select_title">Select Difficulty</string>
    <string name="main_menu_view_profile">View Profile</string>
    <string name="menu_item_help">Show Help</string>
    <string name="main_menu_view_profile">View Profile</string>
    <string name="host_ip_hint">Enter Host IP</string>
    <string name="host_ip_separator">:</string>
    <string name="host_port_hint">Enter Host Port</string>
    <string name="prefs_activity_title">Settings</string>
    <string name="pref_title_local_debug">Local Debug Mode</string>
    <string name="pref_title_use_nios">Use Nios/Middleman</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_scan">Scan</string>
    <string name="dialog_quit_conf_message">Do you want to quit the game?</string>
    <string name="dialog_win_message_p1">I beat\u0020</string>
    <string name="dialog_loss_message_p1">I lose to\u0020</string>
    <string name="dialog_game_over_message_p2">\u0020 in Battleship! #battleship #eece381 #group10</string>
    <string name="pref_title_middleman_ip">Middleman IP</string>
    <string name="pref_title_middleman_port">Middleman Port</string>
    <string name="btn_guest">Guest</string>
    <string name="btn_host">Host</string>
    <string name="btn_one_player">1-P</string>
    <string name="pref_nios_group_title">Nios Settings</string>
    <string name="pref_general_group_title">General Settings</string>

    <string-array name="pref_history_entries">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Five</item>
        <item>Ten</item>
    </string-array>
    <string-array name="pref_history_entryvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="pref_history_number">Number of Past Players to Keep</string>
    <string name="dialog_history">History</string>
    <string name="dialog_title_history">Past Players</string>

    <string-array name="dialog_recent_plays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="dialog_level_select">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="default_player_name">Player</string>
    <string name="profile_activity_title">Profile</string>
    <string name="profile_activity_title_edit_mode">Edit Profile</string>
    <string name="profile_edit_image_hint">Tap to change image</string>
    <string name="profile_edit_name_hint">Profile name</string>
    <string name="profile_taunt_label">Taunt:</string>
    <string name="profile_edit_taunt_hint">Your opponents will see this!</string>
    <string name="game_vs_bar_opponent_title">Opponent:</string>
    <string name="game_vs_bar_opponent_name_placeholder">Semi-Colonel Bitsley</string>
    <string name="game_vs_bar_opponent_taunt_placeholder">Shiver me Registers!</string>
    <string name="game_vs_bar_turn">Turn:</string>
    <string name="help_overlay_choose_move">Touch and choose a move to send your opponent</string>
    <string name="help_overlay_fire_move">When you’ve picked a position, tap this fire button to send your move</string>
    <string name="help_overlay_seeOther">Tap this button to see your own board</string>
    <string name="help_overlay_reposition">Tap and drag to reposition your ships.</string>
    <string name="help_overlay_done">When you’re done repositioning, hit the check mark to set your board</string>
    <string name="help_overlay_rotate">Tap this button to rotate your ship</string>

</resources>
