<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/pref_general_group_title"
        android:key="pref_general_group_title">
        <ListPreference
            android:key="pref_history_number"
            android:title="@string/pref_history_number"
        	android:entries="@array/pref_history_entries"
        	android:entryValues="@array/pref_history_entryvalues" />
    </PreferenceCategory>    	
        
    <PreferenceCategory 
        android:title="@string/pref_nios_group_title"
        android:key="pref_nios_group_title">
		    <SwitchPreference
		        android:key="pref_use_nios"
		        android:persistent="true"
		        android:title="@string/pref_title_use_nios"
		        android:defaultValue="true" />
		    
		    <EditTextPreference 
		        android:key="pref_middleman_ip"
		        android:title="@string/pref_title_middleman_ip"
		        android:dependency="pref_use_nios" />
		    
		    <com.group10.battleship.prefs.EditTextIntPreference 
		        android:key="pref_middleman_port"
		        android:title="@string/pref_title_middleman_port"
		        android:dependency="pref_use_nios" />
	</PreferenceCategory>
    
</PreferenceScreen>
